@startuml

title __HOME's Class Diagram__\n

  namespace cz.utb.thesisapp {
    namespace ui.home {
      class cz.utb.thesisapp.ui.home.HomeFragment {
          ~ ipAdress : String
          ~ root : View
          ~ sharedPreferences : SharedPreferences
          ~ userName : String
          {static} - TAG : String
          - kryoClients : HashMap<String, String>
          + onCreateView()
          + onPause()
          + onResume()
          + onStop()
          + setDropdownMenu()
          + setPersistenceData()
          - unboxBool()
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace ui.home {
      class cz.utb.thesisapp.ui.home.HomeViewModel {
          {static} - TAG : String
          - firebaseConnected : MutableLiveData<Boolean>
          - firebaseRemoteListener : MutableLiveData<Boolean>
          - kryoConnected : MutableLiveData<Boolean>
          - kryoUseDatabase : MutableLiveData<Boolean>
          - mBounded : MutableLiveData<Boolean>
          - requireRefresh : MutableLiveData<Boolean>
          - users : MutableLiveData<HashMap<String, String>>
          - webConnected : MutableLiveData<Boolean>
          + HomeViewModel()
          + getFirebaseConnected()
          + getFirebaseRemoteListener()
          + getKryoConnected()
          + getKryoUseDatabase()
          + getRequireRefresh()
          + getUsers()
          + getWebConnected()
          + getmBounded()
          + setFirebaseConnected()
          + setFirebaseRemoteListener()
          + setKryoConnected()
          + setKryoUseDatabase()
          + setRequireRefresh()
          + setUsers()
          + setWebConnected()
          + setmBounded()
      }
    }
  }
  

  cz.utb.thesisapp.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  cz.utb.thesisapp.ui.home.HomeFragment o-- cz.utb.thesisapp.ui.home.HomeViewModel : homeViewModel
  cz.utb.thesisapp.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
